adding height property

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ $(document).ready(function(){
 </head>
 
 
-<body class="work-page collaboration-12-year-old-self">
+<body class="work-page collaboration-12-year-old-self" style="height:auto">
 	<div class="app-container">
 	<button class="loadButton" onclick="setupApp()">LOAD DRAWING APP</button>
 		<div id="drawingApp">
